Added AI logging

--- a/asp-dotnet-core-mvc.csproj
+++ b/asp-dotnet-core-mvc.csproj
@@ -5,6 +5,15 @@
     <RootNamespace>asp_dotnet_core_mvc</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.12.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.12.0" />
+  </ItemGroup>
+
 
 
 </Project>
